--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-    <title>WebGPU softbodies</title>
+	<meta property="og:title" content="Softbodies - ThreeJS WebGPU Experiment - holtsetio.com" />
+    <meta property="og:image" content="https://holtsetio.com/img/lab/softbodies.jpg" />
+    <title>Softbodies - ThreeJS WebGPU Experiment - holtsetio.com</title>
     <style>
       html,
       body {
@@ -11,6 +13,7 @@
         height: 100%;
         margin: 0;
         position: relative;
+        overflow: hidden;
       }
       #container {
         width: 100%;
@@ -62,7 +65,7 @@
     <div id="container">
     <div id="veil">
       <div id="progress-bar"><div id="progress"></div></div>
-      <div id="error">Error: Your device does not support WebGPU.</div>
+      <div id="error"></div>
     </div>
     <script src="./index.js" type="module"></script>
   </body>
