--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, height=device-height, interactive-widget=resizes-content, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-  <meta property="og:title" content="Softbodies - ThreeJS WebGPU Experiment - holtsetio.com" />
-  <meta property="og:image" content="https://holtsetio.com/img/lab/softbodies.jpg" />
-  <title>Softbodies - ThreeJS WebGPU Experiment - holtsetio.com</title>
+  <meta property="og:title" content="Glass Softbodies - ThreeJS WebGPU Experiment - holtsetio.com" />
+  <meta property="og:image" content="https://holtsetio.com/img/lab/softglass.jpg" />
+  <title>Glass Softbodies - ThreeJS WebGPU Experiment - holtsetio.com</title>
   <style>
     html,
     body {
